--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="Shows\Thrill\Sita ramam.jpg" alt="" class="card-img">
+                <img src="shows\\thrill\Sita ramam.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Sita Ramam</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
