--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="shows\\thrill\Sita ramam.jpg" alt="" class="card-img">
+                <img src="shows\thrill\Sita ramam.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Sita Ramam</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Shiddat.jpeg" alt="" class="card-img">
+                <img src="shows\thrill\Shiddat.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Shiddat</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -92,7 +92,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Apurva.jpg" alt="" class="card-img">
+                <img src="shows\thrill\Apurva.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Apurva</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Freddy.jpg" alt="" class="card-img">
+                <img src="shows\thrill\Freddy.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Freddy</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Laxmi.jpg" alt="" class="card-img">
+                <img src="shows\thrill\Laxmi.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Laxmi</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -119,7 +119,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\A thursdat.jpg" alt="" class="card-img">
+                <img src="shows\thrill\A thursdat.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">A Thursday</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -128,7 +128,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Manjummel boys.jpeg" alt="" class="card-img">
+                <img src="shows\thrill\Manjummel boys.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Manjummel Boys</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\Chhichhore.jpeg" alt="" class="card-img">
+                <img src="shows\thrill\Chhichhore.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Chhichhore</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -146,7 +146,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\mission mangal.jpg" alt="" class="card-img">
+                <img src="shows\thrill\mission mangal.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Mission Mangal</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Thrill\khuda hafiz.jpg" alt="" class="card-img">
+                <img src="shows\thrill\khuda hafiz.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Khuda Hafiz</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -175,7 +175,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="Shows\Series\Aashiqana.jpeg" alt="" class="card-img">
+                <img src="shows\Series\Aashiqana.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Aashiqana</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\Pop kaun .jpg" alt="" class="card-img">
+                <img src="shows\Series\Pop kaun .jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Pop kaun</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\Taaza khabar.jpeg" alt="" class="card-img">
+                <img src="shows\Series\Taaza khabar.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Taaza Khabar</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -202,7 +202,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\November story.jpg" alt="" class="card-img">
+                <img src="shows\Series\November story.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">November Story</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -212,7 +212,7 @@
 
 
             <div class="card">
-                <img src="Shows\Series\Criminal justice.jpeg" alt="" class="card-img">
+                <img src="shows\Series\Criminal justice.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Criminal Justice</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -221,7 +221,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\Aarya.jpeg" alt="" class="card-img">
+                <img src="shows\Series\Aarya.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Aarya</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -231,7 +231,7 @@
 
 
             <div class="card">
-                <img src="Shows\Series\The night manager.jpg" alt="" class="card-img">
+                <img src="shows\Series\The night manager.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">The Night Manager</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -240,7 +240,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\human.jpeg" alt="" class="card-img">
+                <img src="shows\Series\human.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Human</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -249,7 +249,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\special ops.jpeg" alt="" class="card-img">
+                <img src="shows\Series\special ops.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Special ops</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -258,7 +258,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Series\show time.jpg" alt="" class="card-img">
+                <img src="shows\Series\show time.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Show Time</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -276,7 +276,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="Shows\Marvel\Avengers endgame.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Avengers endgame.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Avengers Endgame</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -285,7 +285,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Multiverse of madness.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Multiverse of madness.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Multiverse of Madness</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -294,7 +294,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Spiderman no way home.jpeg" alt="" class="card-img">
+                <img src="shows\Marvel\Spiderman no way home.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Spiderman No Way Home</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Moon knight.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Moon knight.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Moon Knight</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -312,7 +312,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Wanda vision.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Wanda vision.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Wanda Vision</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -321,7 +321,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Thor.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Thor.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Thor</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -330,7 +330,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Loki 1.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Loki 1.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Loki</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -339,7 +339,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Black panther.jpg" alt="" class="card-img">
+                <img src="shows\Marvel\Black panther.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Black Panther</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -348,7 +348,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Marvel\Civil war.jpeg" alt="" class="card-img">
+                <img src="shows\Marvel\Civil war.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Civil War</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -366,7 +366,7 @@
          <div class="card-container">
  
              <div class="card">
-                 <img src="Shows\Disney Animation\Coco.jpg" alt="" class="card-img">
+                 <img src="shows\Disney Animation\Coco.jpg" alt="" class="card-img">
                  <div class="card-body">
                      <h2 class="name">Coco</h2>
                      <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -375,7 +375,7 @@
              </div>
  
              <div class="card">
-                 <img src="Shows\Disney Animation\up.jpg" alt="" class="card-img">
+                 <img src="shows\Disney Animation\up.jpg" alt="" class="card-img">
                  <div class="card-body">
                      <h2 class="name">Up</h2>
                      <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -383,7 +383,7 @@
                  </div>
              </div>
              <div class="card">
-                <img src="Shows\Disney Animation\tangled.jpeg" alt="" class="card-img">
+                <img src="shows\Disney Animation\tangled.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Tangled</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -392,7 +392,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\Frozen.jpeg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Frozen.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Frozen</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -401,7 +401,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\Moana.jpg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Moana.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Moana</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -410,7 +410,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\raya.png" alt="" class="card-img">
+                <img src="shows\Disney Animation\raya.png" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Raya And the Last Dragon</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -419,7 +419,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\Ratatiull.jpeg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Ratatiull.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Ratatouille</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -428,7 +428,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\Wall e.jpg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Wall e.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Wall E</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -436,7 +436,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="Shows\Disney Animation\Ralph breaks the internet.jpg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Ralph breaks the internet.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Ralph Breaks The Internet</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -445,7 +445,7 @@
             </div>
 
             <div class="card">
-                <img src="Shows\Disney Animation\Frozen 2.jpeg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Frozen 2.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Frozen 2</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
