--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
         <div class="video-card">
             <img src="images/pixar.PNG" class="video-card-image" alt="">
-            <video src="videos/pixar.mp4" mute loop class="card-video"></video>
+            <video src="media/pixar.mp4" mute loop class="card-video"></video>
         </div>
 
         <div class="video-card">
             <img src="images/marvel.PNG" class="video-card-image" alt="">
-            <video src="videos/marvel.mp4" mute loop class="card-video"></video>
+            <video src="media/marvel.mp4" mute loop class="card-video"></video>
         </div>
 
         <div class="video-card">
             <img src="images/star-wars.PNG" class="video-card-image" alt="">
-            <video src="videos/star-war.mp4" mute loop class="card-video"></video>
+            <video src="media/star-war.mp4" mute loop class="card-video"></video>
         </div>
 
         <div class="video-card">
             <img src="images/geographic.PNG" class="video-card-image" alt="">
-            <video src="videos/geographic.mp4" mute loop class="card-video"></video>
+            <video src="media/geographic.mp4" mute loop class="card-video"></video>
         </div>
     </div>
 
