--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="shows\Series\Aashiqana.jpeg" alt="" class="card-img">
+                <img src="shows\series\Aashiqana.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Aashiqana</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\Pop kaun .jpg" alt="" class="card-img">
+                <img src="shows\series\Pop kaun .jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Pop kaun</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\Taaza khabar.jpeg" alt="" class="card-img">
+                <img src="shows\series\Taaza khabar.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Taaza Khabar</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -202,7 +202,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\November story.jpg" alt="" class="card-img">
+                <img src="shows\series\November story.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">November Story</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -212,7 +212,7 @@
 
 
             <div class="card">
-                <img src="shows\Series\Criminal justice.jpeg" alt="" class="card-img">
+                <img src="shows\series\Criminal justice.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Criminal Justice</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -221,7 +221,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\Aarya.jpeg" alt="" class="card-img">
+                <img src="shows\series\Aarya.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Aarya</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -231,7 +231,7 @@
 
 
             <div class="card">
-                <img src="shows\Series\The night manager.jpg" alt="" class="card-img">
+                <img src="shows\series\The night manager.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">The Night Manager</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -240,7 +240,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\human.jpeg" alt="" class="card-img">
+                <img src="shows\series\human.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Human</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -249,7 +249,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\special ops.jpeg" alt="" class="card-img">
+                <img src="shows\series\special ops.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Special ops</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -258,7 +258,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\Series\show time.jpg" alt="" class="card-img">
+                <img src="shows\series\show time.jpg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Show Time</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
