--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
              </div>
  
              <div class="card">
-                 <img src="shows\Disney Animation\up.jpg" alt="" class="card-img">
+                 <img src="shows\Disney Animation\Up.jpg" alt="" class="card-img">
                  <div class="card-body">
                      <h2 class="name">Up</h2>
                      <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -383,7 +383,7 @@
                  </div>
              </div>
              <div class="card">
-                <img src="shows\Disney Animation\tangled.jpeg" alt="" class="card-img">
+                <img src="shows\Disney Animation\Tangled.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Tangled</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
