--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="card-container">
 
             <div class="card">
-                <img src="shows\series\Aashiqana.jpeg" alt="" class="card-img">
+                <img src="shows\series\aashiqana.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Aashiqana</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="card">
-                <img src="shows\series\Taaza khabar.jpeg" alt="" class="card-img">
+                <img src="shows\series\taaza khabar.jpeg" alt="" class="card-img">
                 <div class="card-body">
                     <h2 class="name">Taaza Khabar</h2>
                     <h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
